<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_welcome">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.paradox.minerstats.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.paradox.minerstats.ui.payout.PayoutFragment"
        android:label="@string/title_payouts"
        tools:layout="@layout/fragment_payout" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.paradox.minerstats.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_welcome"
        android:name="com.paradox.minerstats.ui.welcome.WelcomeFragment"
        tools:layout="@layout/fragment_welcome" />
</navigation>