<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.paradox.minerstats.ui.welcome.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_selector"
        tools:context=".ui.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/title_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_100"
            android:text="@string/ethermine"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/miner_monitor"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_one"
            app:layout_constraintTop_toBottomOf="@+id/title_one" />

        <TextView
            android:id="@+id/subtitle_disclaimer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_100"
            android:layout_marginEnd="@dimen/spacing_16"
            android:text="@string/monitoring_intro"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_second" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_16"
            android:hint="@string/enter_your_wallet_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_disclaimer">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:text="@={vm.inputWallet}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:onClick="@{()-> vm.onGetStartedTapped()}"
            android:text="@string/get_started"
            android:textSize="@dimen/font_size_button"
            app:layout_constraintEnd_toEndOf="@+id/input_layout"
            app:layout_constraintStart_toStartOf="@+id/input_layout"
            app:layout_constraintTop_toBottomOf="@+id/input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>