<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.paradox.minerstats.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_70"
            android:background="@color/purple_500"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/current_text"
                style="@style/Text.Title.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:text="@string/current"
                app:layout_constraintEnd_toStartOf="@+id/average_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_mhs_text"
                style="@style/Text.Subtitle.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:set_hash_rate="@{vm.stats.currentHashrate}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/current_text"
                app:layout_constraintStart_toStartOf="@+id/current_text"
                app:layout_constraintTop_toBottomOf="@+id/current_text"
                tools:text="200 MH/s" />

            <TextView
                android:id="@+id/average_text"
                style="@style/Text.Title.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:text="@string/average"
                app:layout_constraintEnd_toStartOf="@+id/reported_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/current_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/average_mhs_text"
                style="@style/Text.Subtitle.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:set_hash_rate="@{vm.stats.averageHashrate}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/average_text"
                app:layout_constraintStart_toStartOf="@+id/average_text"
                app:layout_constraintTop_toBottomOf="@+id/average_text"
                tools:text="200 MH/s" />

            <TextView
                android:id="@+id/reported_text"
                style="@style/Text.Title.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:text="@string/reported"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/average_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/reported_mhs_text"
                style="@style/Text.Subtitle.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:set_hash_rate="@{vm.stats.reportedHashrate}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/reported_text"
                app:layout_constraintStart_toStartOf="@+id/reported_text"
                app:layout_constraintTop_toBottomOf="@+id/reported_text"
                tools:text="200 MH/s" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/divider_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/windowBackground"
                android:clipToPadding="false"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginBottom="?actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/valid_text"
                style="@style/Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:text="@string/valid_shares"
                app:layout_constraintEnd_toStartOf="@+id/stale_text_view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/valid_value_text"
                style="@style/Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(vm.stats.validShares)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/valid_text"
                app:layout_constraintStart_toStartOf="@+id/valid_text"
                app:layout_constraintTop_toBottomOf="@+id/valid_text"
                tools:text="170" />

            <TextView
                android:id="@+id/stale_text_view"
                style="@style/Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:text="@string/stale_shares"
                app:layout_constraintEnd_toStartOf="@+id/invalid_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/valid_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stale_text"
                style="@style/Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(vm.stats.staleShares)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/stale_text_view"
                app:layout_constraintStart_toStartOf="@+id/stale_text_view"
                app:layout_constraintTop_toBottomOf="@+id/stale_text_view"
                tools:text="30" />

            <TextView
                android:id="@+id/invalid_text"
                style="@style/Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:text="@string/invalid_shares"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/stale_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/invalid_mhs_text"
                style="@style/Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(vm.stats.invalidShares)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/invalid_text"
                app:layout_constraintStart_toStartOf="@+id/invalid_text"
                app:layout_constraintTop_toBottomOf="@+id/invalid_text"
                tools:text="60" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>